docs/examples/errors/error_handlers/src/blueprint.rs
//! px:import
use pavex::{Blueprint, blueprint::from};

pub fn blueprint() -> Blueprint {
    let mut bp = Blueprint::new();
    bp.import(from![crate]); // px:import:ann:1
    // px::skip:start
    bp.routes(from![crate]);
    bp
    // px::skip:end
}
